# safesort-ai

./: .gitignore  Cargo.toml  Makefile  PROJECT_CHECKPOINT.md  README.md  ROADMAP.md  SAFETY.md
examples/: safesort-rules.toml
scripts/: install.sh  uninstall.sh
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  shortcuts.rs
src/apply/: engine.rs  mod.rs  receipt.rs
src/detectors/: archives.rs  cron.rs  mod.rs  projects.rs  scripts.rs  sensitive.rs  symlinks.rs  systemd.rs
src/graph/: dependency_graph.rs  edge.rs  impact.rs  mod.rs  node.rs
src/manifest/: checksum.rs  mod.rs  plan_manifest.rs  rollback.rs
src/placement/: confidence.rs  destination.rs  engine.rs  file_purpose.rs  local_dest.rs  mod.rs  ownership.rs  question_queue.rs  rules.rs
src/preflight/: mod.rs
src/profile/: folder_structure.rs  mod.rs  signals.rs  user_profile.rs
src/reports/: json.rs  markdown.rs  mod.rs  terminal.rs
src/rules_file/: loader.rs  mod.rs  schema.rs  validation.rs
src/safety/: mod.rs  policy.rs  rules.rs
src/scan/: classifier.rs  evidence.rs  item.rs  mod.rs  risk.rs  walker.rs
tests/: placement_tests.rs  safety_tests.rs  shortcuts_tests.rs
